fix onthefly snapshooter with exclusionList